--- a/ansible.yaml
+++ b/ansible.yaml
@@ -23,14 +23,18 @@
   - name: Setting up Falcon
     shell: |
       cd {{ dir }}/ansible-falcon/falcon
-      bash download-sample-data.sh
+      git clone https://github.com/cdunn2001/git-sym.git
+      git clone https://github.com/pb-cdunn/FALCON-examples.git
+      cd FALCON-examples
+      ../git-sym/git-sym update run/greg200k-sv2
+      mv run/greg200k-sv2/data/greg200k-sv2/subreads* project_dir/ansible-falcon/falcon/
+      rm -rf FALCON-examples/ git-sym/
       echo '{{ dir }}/ansible-falcon/falcon/{{ fasta_read_1 }}' > subreads.fasta.fofn
       echo '{{ dir }}/ansible-falcon/falcon/{{ fasta_read_2 }}' >> subreads.fasta.fofn
       echo '{{ dir }}/ansible-falcon/falcon/{{ bam_read_1 }}' > subreads.bam.fofn
       echo '{{ dir }}/ansible-falcon/falcon/{{ bam_read_2 }}' >> subreads.bam.fofn      
       sed -i "s|project_dir|{{ dir }}|g" main.nf
       sed -i "s|project_dir|{{ dir }}|g" nextflow.config
-      sed -i "s|project_dir|{{ dir }}|g" download-sample-data.sh
       module load singularity
       singularity pull docker://quay.io/biocontainers/pbcore:1.7.1--py27_0
       wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh
