--- a/falcon/nextflow.config
+++ b/falcon/nextflow.config
@@ -5,7 +5,7 @@ trace {
 }
 
 // set your directory
-dir = "project_dir/ansible-falcon/falcon"
+//dir = "__project_dir__/ansible-falcon/falcon"
 
 profiles {
 
