Remove some debugging

--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,12 @@ nf-work
 # Containers
 *.sif
 # Exmaple input
-subreads1*
-subreads2*
+subreads*
 # Nextflow work dirs
 0-*
 1-*
 2-*
 3-*
 4-*
+# Other nextflow stuff
 Unzip_config.json
